correccion BO